--- a/assignmentapirecipes/src/main/resources/application.properties
+++ b/assignmentapirecipes/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/recipes
+spring.datasource.username=recipes
+spring.datasource.password=akwtBp1r-K3Oz53U
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
